--- a/Crowd_Funding_Platform/Views/AdminDashboard/Index.cshtml
+++ b/Crowd_Funding_Platform/Views/AdminDashboard/Index.cshtml
@@ -4,7 +4,12 @@
     Layout = "~/Views/Shared/_dashboardLayout.cshtml";
 }
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
+@* 
+<div class="d-flex justify-content-end mb-3">
+    <a href="/Creator/Dashboard" class="btn btn-primary">
+        🔄 Switch to Creator Dashboard
+    </a>
+</div> *@
 <style>
     body {
         font-family: 'Segoe UI', sans-serif;
