--- a/Crowd_Funding_Platform/Views/Shared/_dashboardLayout.cshtml
+++ b/Crowd_Funding_Platform/Views/Shared/_dashboardLayout.cshtml
@@ -281,7 +281,7 @@
                                    data-bs-target="@(hasSubTabs ? "#" + collapseId : "")"
                                    aria-expanded="false">
                                     <span class="d-flex align-items-center">
-                                        <i class="mdi @tab.IconPath menu-icon me-2"></i>
+                                        <i class="fa @tab.IconPath menu-icon me-2"></i>
                                         <span class="menu-title">@tab.TabName</span>
                                     </span>
                                     @if (hasSubTabs)
