--- a/Crowd_Funding_Platform/Views/Users/CreatorsList.cshtml
+++ b/Crowd_Funding_Platform/Views/Users/CreatorsList.cshtml
@@ -5,16 +5,34 @@
     Layout = "~/Views/Shared/_dashboardLayout.cshtml";
 }
 
+
+<div class="export-buttons" style="margin-top: -16px; margin-right: 17px;">
+    <a asp-action="ExportCreatorsToExcel"
+       class="btn btn-outline-success"
+       data-bs-toggle="tooltip" data-bs-placement="top" title="Export to Excel"
+       style="background-color: #1bcfb4; color: white;">
+        <i class="fas fa-file-excel"></i>
+    </a>
+
+    <a href="@Url.Action("ExportCreatorsToPdf", "Users")"
+       class="btn btn-outline-danger"
+       data-bs-toggle="tooltip" data-bs-placement="top" title="Export to PDF"
+       style="background-color: #fe7c96; color: white;">
+        <i class="fas fa-file-pdf"></i>
+    </a>
+</div>
+
+
+
 <h2 class="text-center mb-4 text-dark">Campaign Creators</h2>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 
-
-<a href="@Url.Action("ExportCreatorsToExcel", "Users")" class="btn btn-success">
+@* <a href="@Url.Action("ExportCreatorsToExcel", "Users")" class="btn btn-success">
     Export to Excel
-</a>
+</a> *@
 
 <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
     <table class="table table-hover">
@@ -172,3 +190,19 @@
 
 
 </style>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    
+    <script>
+
+        // Initialize tooltips
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl)
+        });
+
+    </script>
+        }
